force-app/main/default/objects/Account/fields/Service_Area_Zips__c.field-meta.xml
<CustomField>
    <fullName>Service_Area_Zips__c</fullName>
    <label>Service Area Zip Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>