force-app/main/default/objects/Account/fields/WhatsApp_Business_ID__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Business_ID__c</fullName>
    <label>WhatsApp Business ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>