force-app/main/default/objects/Account/recordTypes/Dealership.recordType-meta.xml
<RecordType>
    <fullName>Dealership</fullName>
    <active>true</active>
    <label>Dealership</label>
</RecordType>